--- a/nicepage.css
+++ b/nicepage.css
@@ -35208,15 +35208,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-text-1 {
-  margin: 27px auto 0 21px;
-}
-
-.u-header .u-menu-1 {
-  margin: -44px 35px 35px auto;
-}
-
-.u-header .u-nav-2 {
-  font-size: 1.25rem;
+  margin: 27px auto 27px 21px;
 }
 
 
