--- a/Home.css
+++ b/Home.css
@@ -57,7 +57,7 @@
 }
 
 .u-section-2 .u-text-2 {
-  margin: 19px 11px 0;
+  margin: 19px 0 0;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -67,6 +67,7 @@
 .u-section-2 .u-icon-2 {
   height: 64px;
   width: 64px;
+  color: currentcolor !important;
   margin: 0 auto;
 }
 
@@ -75,7 +76,7 @@
 }
 
 .u-section-2 .u-text-4 {
-  margin: 19px 11px 0;
+  margin: 19px 0 0;
 }
 
 .u-section-2 .u-container-layout-3 {
@@ -93,7 +94,7 @@
 }
 
 .u-section-2 .u-text-6 {
-  margin: 19px 11px 0;
+  margin: 19px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -105,12 +106,10 @@
 
   .u-section-2 .u-text-2 {
     margin-right: 16px;
-    margin-left: 0;
   }
 
   .u-section-2 .u-text-4 {
     margin-right: 16px;
-    margin-left: 0;
   }
 
   .u-section-2 .u-icon-3 {
@@ -119,7 +118,6 @@
 
   .u-section-2 .u-text-6 {
     margin-right: 16px;
-    margin-left: 0;
   }
 }
 
@@ -172,18 +170,18 @@
 
 .u-section-3 .u-custom-html-1 {
   min-height: 511px;
-  height: auto;
   margin: 20px 54px 0 736px;
 }
 
 .u-section-3 .u-image-1 {
-  width: 570px;
-  height: 308px;
-  margin: -417px auto 60px 111px;
+  width: 684px;
+  height: 391px;
+  margin: -465px auto 60px 20px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-custom-html-1 {
+    height: auto;
     margin-right: 0;
     margin-left: 590px;
   }
@@ -197,7 +195,7 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 535px;
+    min-height: 469px;
   }
 
   .u-section-3 .u-custom-html-1 {
@@ -206,14 +204,14 @@
 
   .u-section-3 .u-image-1 {
     width: 540px;
-    height: 292px;
+    height: 309px;
     margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 427px;
+    min-height: 355px;
   }
 
   .u-section-3 .u-custom-html-1 {
@@ -222,6 +220,6 @@
 
   .u-section-3 .u-image-1 {
     width: 340px;
-    height: 184px;
+    height: 195px;
   }
 }
